# python-base-uv

./: AGENTS.md  Makefile  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_something.py
